tests/data/bad/inheritance_changes_bad.py
from ntc import CN

from ..good.inheritance import cfg

cfg = CN(cfg)
cfg.DICT.INT = 2
